@@ -88,6 +88,7 @@ require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
 require 'lobbyist/v2/private_feedback_topic'
+require 'lobbyist/v2/promo'
 require 'lobbyist/v2/review_topic'
 require 'lobbyist/v2/scotty_setting'
 require 'lobbyist/v2/smart_invite_setting'
